--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  font-family: 'Raleway', sans-serif; 
+  color: #fdec9a;
+  background-color: #445d6e;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +11,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: #fdec9a;
+}
+
+.sidebar {
+  width: 100%;
+  max-width: 40px;
+  margin-left: -8px;
+  margin: 0 auto 10px;
+  position: absolute;
+  bottom: 5em;
+  z-index: 10;
+  background-color: #445d6e;
+}
+
+.icons {
+
 }
